--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="NARANJO.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="agx" poster="poster.webp" shadow-intensity="1.92" exposure="1.25" shadow-softness="0.56" camera-orbit="-40.51deg 73.47deg 8.29m" field-of-view="30deg">
-      <button class="Hotspot" slot="hotspot-2" data-position="-0.03301169450318753m 1.266399622663245m 0.013865659597652708m" data-normal="-0.963656095062825m 0.06936679791485338m 0.2579829021375402m" data-visibility-attribute="visible">
-          <div class="HotspotAnnotation">El árbol de naranjo es resistente a plagas y enfermedades</div>
-      </button><button class="Hotspot" slot="hotspot-3" data-position="-0.9764184025233291m 2.930729299700727m 0.8828811862865973m" data-normal="-0.6537739144946192m 0.3177528285785588m 0.6867407142850258m" data-visibility-attribute="visible">
-          <div class="HotspotAnnotation">Los naranjos tardan entre 3 y 4 años en dar sus primeros frutos.</div>
-      </button><button class="Hotspot" slot="hotspot-7" data-position="-1.4550134673088486m 2.1673935050287296m -0.5307785046094964m" data-normal="-0.6657636668657572m 0.6263326106318748m 0.4055443264804991m" data-visibility-attribute="visible">
+    <model-viewer src="compressed_1730859703230_NARANJO.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="0.94" exposure="0.98" shadow-softness="0.42" camera-orbit="-36.31deg 75.76deg 8.462m" field-of-view="30deg">
+      <button class="Hotspot" slot="hotspot-1" data-position="-0.04267615579016315m 0.7345051317016102m -0.047150273285426224m" data-normal="0.8431386422775192m 0.3227130677826098m -0.43008546334508707m" data-visibility-attribute="visible">
+          <div class="HotspotAnnotation">Las hojas, las raíces, la corteza y los frutos del naranjo se utilizan en la medicina tradicional
+          </div>
+      </button><button class="Hotspot" slot="hotspot-2" data-position="0.34801199816098105m 2.9411967600333844m 1.0627661882395945m" data-normal="0.1426009859342544m -0.7656918380282988m -0.6272008992240238m" data-visibility-attribute="visible">
           <div class="HotspotAnnotation">El árbol de naranja es un cítrico que produce la flor de Azahar, con la que se elabora una miel muy apreciada.
           </div>
-      </button><button class="Hotspot" slot="hotspot-9" data-position="0.044884003378623305m 0.5363327401345059m -0.0006949298171603502m" data-normal="0.8474054384466692m 0.18843862441781595m -0.49638181646644763m" data-visibility-attribute="visible">
-          <div class="HotspotAnnotation">Las hojas, las raíces, la corteza y los frutos del naranjo se utilizan en la medicina tradicional</div>
+      </button><button class="Hotspot" slot="hotspot-3" data-position="-0.9405967083884601m 2.917562207527193m 0.907585888807755m" data-normal="-0.25510075468606874m 0.19351989077122206m 0.9473508625818065m" data-visibility-attribute="visible">
+          <div class="HotspotAnnotation">Los naranjos tardan entre 3 y 4 años en dar sus primeros frutos.</div>
+      </button><button class="Hotspot" slot="hotspot-7" data-position="-0.2986184757969994m 1.4537223225811189m 0.03365538020598502m" data-normal="0.3076089106976391m -0.03440476689537198m 0.9508906719882614m" data-visibility-attribute="visible">
+          <div class="HotspotAnnotation">El árbol de naranjo es resistente a plagas y enfermedades</div>
       </button>
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
